# basic-platformer

./: .gitignore  CMakeLists.txt  compile_commands.json  game.run  readme.md
src/: index.cpp  level.cpp  level.h
src/entities/: CMakeLists.txt  entities.h  game-object.h  objective.cpp  objective.h  physics-entity.h  platform.cpp  platform.h  player.cpp  player.h  world-entity.cpp  world-entity.h  world.cpp  world.h
